namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: playground 
  labels:
    ns: play
    homework: part1
