deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 198619901958/k8s-nginx 
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "200Mi"
            cpu: "0.2"
          limits:
            cpu: "0.5"
        volumeMounts:
          - name: nginx-index-file
            mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-cm
      imagePullSecrets:
        - name: nicu-creds
