echo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: playground
  name: echo-deployment
  labels:
    app: echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-deploy
  template:
    metadata:
      labels:
        app: echo-deploy
    spec:
      containers:
      - name: echo-container
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "200Mi"
            cpu: "0.2"
          limits:
            cpu: "0.5"
