pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: playground
  labels:
    pod1: nginx1
spec:
  containers:
  - name: nginx-container
    image: nginx:1.21
    ports:
      - containerPort: 80
    command: ["/bin/sh"]
      #args: ["$(TESTING)"]
    args: ["-c", "while true; do echo hello; sleep 100;done"]
  restartPolicy: OnFailure
