cluster-service-echo.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: playground
spec:
  type: ClusterIP
  selector:
    app: echo-deploy
  ports:
  - port: 80
    targetPort: 80
