service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport1
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 31111
  selector:  
    app: nginx
#  clusterIP: 10.96.1.1
#  clusterIPs:
 #   - 10.96.1.1
  type: NodePort
  sessionAffinity: None
#  externalTrafficPolicy: Cluster
#  ipFamilies:
#    - IPv4
#  ipFamilyPolicy: SingleStack
